header with form almost done

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <h1>Join the next generation of digital creators !</h1>
         <p>Lorem ipsum dolor sit amet, consetectur adipiscing</p>
         </div>
-        <form> 
+        <form class="form"> 
             <h1>Lorem ipsum dolor sit amet</h1>
-            <p>Lorem ipsum dolor sit amet</p>
+           <p>Lorem ipsum dolor sit amet</p> 
 
             <label for="name">What's your name?</label>
-            <input type="text" value="Write here your name" name="name">
+            <input type="text" placeholder="Write here your name" name="name">
             <label for="email">What's your email?</label>
-            <input type="email" value="Write here your email" name="email">
+            <input type="email" placeholder="Write here your email" name="email">
             <label for="number">What's your phone number?</label>
-            <input type="number" value="Write here your phone" name="number">
+            <input type="text" placeholder="Write here your phone" name="number">
             <label for="company">What company are you with?</label>
-            <input type="text" value="Write here your company name" name="company">
+            <input type="number" placeholder="Write here your company name" name="company">
 
             <button type="submit">Download ebook</button>
         </form>
