--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	    <img src="https://www2.ironhack.com/l/688303/2019-04-16/jcjm/688303/10386/IH_BLUE_LOGO_500x500.png" atl="logo">
         <div class="container">
         <div class="header-content">
-        <h1>Join the next generation of digital creators !</h1>
-        <p>Lorem ipsum dolor sit amet, consetectur adipiscing</p>
+        <h1 class="head-text-position">Join the next generation of digital creators !</h1>
+        <p class="head-text-position">Lorem ipsum dolor sit amet, consetectur adipiscing</p>
         </div>
         <form class="form"> 
-            <h1>Lorem ipsum dolor sit amet</h1>
-           <p>Lorem ipsum dolor sit amet</p> 
+            <h1 >Lorem ipsum dolor sit amet</h1>
+           <p >Lorem ipsum dolor sit amet</p> 
 
             <label for="name">What's your name?</label>
             <input type="text" placeholder="Write here your name" name="name">
