sections until our values added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	    <img src="https://www2.ironhack.com/l/688303/2019-04-16/jcjm/688303/10386/IH_BLUE_LOGO_500x500.png" atl="logo">
         <div class="container">
         <div class="header-content">
-        <h1 class="head-text-position">Join the next generation of digital creators !</h1>
-        <p class="head-text-position">Lorem ipsum dolor sit amet, consetectur adipiscing</p>
+        <h1 >Join the next generation of digital creators !</h1>
+        <p >Lorem ipsum dolor sit amet, consetectur adipiscing</p>
         </div>
         <form class="form"> 
             <h1 >Lorem ipsum dolor sit amet</h1>
@@ -32,6 +32,55 @@
         </form>
     </div>
     </header>
+    <section>
+        <div class="container rect-1">
+            <div>
+            <img style="border-radius: 4px 0px 0px 4px" 
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg" alt="group"/>
+            </div>
+            <div class="rect-1-text">
+                <h1 style="color:#F49102; font-size: 30px" >Lorem ipsum dolor sit amet</h1>
+                <p style="margin-top: 2rem; font-size: 18px" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi</p>
+            </div>
+        </div>  
+    </section>
+    <section>
+        <div class="container">
+            <div class="rect-1-text">
+                    <h1 style="color:#0D8B9F; font-size: 34px" >Lorem ipsum dolor sit amet</h1>
+                    <p style="margin-top: 2rem; font-size: 18px" > Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed. <br><br>Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. </p>
+                </div>
+            <div>
+            <img style="width: 30vw;"
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg" alt="group"/>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div>
+            <img style="width: 30vw;"
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg" alt="group"/>
+            </div>
+                <div class="rect-1-text">
+                        <h1 style="color:#F49102; font-size: 34px" >Lorem ipsum dolor sit amet</h1>
+                        <p style="margin-top: 2rem; font-size: 18px" > Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed. <br><br>Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. <br><br> Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
+                    </div>
+            </div>
+    </section>
+    <section>
+        <h1 style="margin-left: 4.5rem; font-size: 35px">Our values</h1>
+        <div class="container video-box">
+            <div class="container" style="flex-direction: column">
+                <h2 style="font-size: 18px">Be driven by passion above anything else</h2>
+                <p style="margin-top: 1rem; font-size: 16px; line-height: 150%">It's hard to achieve success when you don't know where you're going. Through one-on-one mentorship and exposure to our local tech ecosystems, we help you understand what oprions are out there and which ones to pursue.</p>
+            </div>
+            <div class="container">
+                <img style="border-radius: 4px; height: 20vh;"
+                src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562874637/computer_wckgs7.jpg" alt="computer"/>
+            </div>
+        </div>
+    </section>
     %%content%%
 	</body>
 </html>
