--- a/index.html
+++ b/index.html
@@ -1,86 +1,219 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8"/>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <meta name="description" content="%%description%%"/>
-        <link rel="stylesheet" href="./style.css" />
-        <title>%%title%%</title>
-	</head>
-	<body>
-	<header class="header">
-	    <img src="https://www2.ironhack.com/l/688303/2019-04-16/jcjm/688303/10386/IH_BLUE_LOGO_500x500.png" atl="logo">
-        <div class="container">
-        <div class="header-content">
-        <h1 >Join the next generation of digital creators !</h1>
-        <p >Lorem ipsum dolor sit amet, consetectur adipiscing</p>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="%%description%%" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>%%title%%</title>
+  </head>
+  <body>
+    <header class="header">
+      <img
+        src="https://www2.ironhack.com/l/688303/2019-04-16/jcjm/688303/10386/IH_BLUE_LOGO_500x500.png"
+        atl="logo"
+      />
+      <div class="container">
+        <div class="header-content container column">
+          <h1>Join the next generation of digital creators !</h1>
+          <p>Lorem ipsum dolor sit amet, consetectur adipiscing</p>
         </div>
-        <form class="form"> 
-            <h1 >Lorem ipsum dolor sit amet</h1>
-           <p >Lorem ipsum dolor sit amet</p> 
+        <form class="form">
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <p>Lorem ipsum dolor sit amet</p>
 
-            <label for="name">What's your name?</label>
-            <input type="text" placeholder="Write here your name" name="name">
-            <label for="email">What's your email?</label>
-            <input type="email" placeholder="Write here your email" name="email">
-            <label for="number">What's your phone number?</label>
-            <input type="text" placeholder="Write here your phone" name="number">
-            <label for="company">What company are you with?</label>
-            <input type="number" placeholder="Write here your company name" name="company">
+          <label for="name">What's your name?</label>
+          <input type="text" placeholder="Write here your name" name="name" />
+          <label for="email">What's your email?</label>
+          <input
+            type="email"
+            placeholder="Write here your email"
+            name="email"
+          />
+          <label for="number">What's your phone number?</label>
+          <input
+            type="text"
+            placeholder="Write here your phone"
+            name="number"
+          />
+          <label for="company">What company are you with?</label>
+          <input
+            type="number"
+            placeholder="Write here your company name"
+            name="company"
+          />
 
-            <button type="submit">Download ebook</button>
+          <button type="submit">Download ebook</button>
         </form>
-    </div>
+      </div>
     </header>
     <section>
-        <div class="container rect-1">
-            <div>
-            <img style="border-radius: 4px 0px 0px 4px" 
-            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg" alt="group"/>
-            </div>
-            <div class="rect-1-text">
-                <h1 style="color:#F49102; font-size: 30px" >Lorem ipsum dolor sit amet</h1>
-                <p style="margin-top: 2rem; font-size: 18px" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi</p>
-            </div>
-        </div>  
-    </section>
-    <section>
-        <div class="container">
-            <div class="rect-1-text">
-                    <h1 style="color:#0D8B9F; font-size: 34px" >Lorem ipsum dolor sit amet</h1>
-                    <p style="margin-top: 2rem; font-size: 18px" > Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed. <br><br>Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. </p>
-                </div>
-            <div>
-            <img style="width: 30vw;"
-            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg" alt="group"/>
-            </div>
+      <div class="container rect-box">
+        <div>
+          <img
+            style="border-radius: 4px 0px 0px 4px"
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg"
+            alt="group"
+          />
         </div>
-    </section>
-    <section>
-        <div class="container">
-            <div>
-            <img style="width: 30vw;"
-            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg" alt="group"/>
-            </div>
-                <div class="rect-1-text">
-                        <h1 style="color:#F49102; font-size: 34px" >Lorem ipsum dolor sit amet</h1>
-                        <p style="margin-top: 2rem; font-size: 18px" > Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed. <br><br>Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. <br><br> Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
-                    </div>
-            </div>
-    </section>
-    <section>
-        <h1 style="margin-left: 4.5rem; font-size: 35px">Our values</h1>
-        <div class="container video-box">
-            <div class="container" style="flex-direction: column">
-                <h2 style="font-size: 18px">Be driven by passion above anything else</h2>
-                <p style="margin-top: 1rem; font-size: 16px; line-height: 150%">It's hard to achieve success when you don't know where you're going. Through one-on-one mentorship and exposure to our local tech ecosystems, we help you understand what oprions are out there and which ones to pursue.</p>
-            </div>
-            <div class="container">
-                <img style="border-radius: 4px; height: 20vh;"
-                src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562874637/computer_wckgs7.jpg" alt="computer"/>
-            </div>
+        <div class="rect-text container column" style="padding: 3rem">
+          <h1 style="color:#F49102; font-size: 30px">
+            Lorem ipsum dolor sit amet
+          </h1>
+          <p style="margin-top: 2rem" class="fontsize-18">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+            risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+            nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
+            ligula massa, varius a, semper congue, euismod non, mi
+          </p>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="container rect">
+        <div class="rect-text">
+          <h1 style="color:#0D8B9F; font-size: 34px">
+            Lorem ipsum dolor sit amet
+          </h1>
+          <p style="margin-top: 2rem" class="fontsize-18">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+            risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+            nec, ultricies sed. <br /><br />Cras elementum ultrices diam.
+            Maecenas ligula massa, varius a, semper congue, euismod non, mi.
+            Proin porttitor, orci nec nonummy molestie, enim est eleifend mi,
+            non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
+            scelerisque vitae, consequat in, pretium a, enim. Pellentesque
+            congue. Ut in risus volutpat libero pharetra tempor.
+          </p>
+        </div>
+        <div>
+          <img
+            style="width: 30vw;"
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg"
+            alt="group"
+          />
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container rect">
+        <div>
+          <img
+            style="width: 30vw;"
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg"
+            alt="group"
+          />
+        </div>
+        <div class="rect-text">
+          <h1 style="color:#F49102; font-size: 34px">
+            Lorem ipsum dolor sit amet
+          </h1>
+          <p style="margin-top: 2rem" class="fontsize-18">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+            risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+            nec, ultricies sed. <br /><br />Cras elementum ultrices diam.
+            Maecenas ligula massa, varius a, semper congue, euismod non, mi.
+            Proin porttitor, orci nec nonummy molestie, enim est eleifend mi,
+            non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa,
+            scelerisque vitae, consequat in, pretium a, enim. Pellentesque
+            congue. Ut in risus volutpat libero pharetra tempor. <br /><br />
+            Cras vestibulum bibendum augue. Praesent egestas leo in pede.
+            Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit
+            sodales. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed
+            pede pellentesque fermentum. Maecenas adipiscing ante non diam
+            sodales hendrerit.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h1 style="margin-left: 4.5rem; font-size: 35px">Our values</h1>
+      <div class="container video-box">
+        <div class="container column video-box-text">
+          <h2 style="font-size: 18px">
+            Be driven by passion above anything else
+          </h2>
+          <p style="margin-top: 1rem; font-size: 16px">
+            It's hard to achieve success when you don't know where you're going.
+            Through one-on-one mentorship and exposure to our local tech
+            ecosystems, we help you understand what oprions are out there and
+            which ones to pursue.
+          </p>
+        </div>
+        <div class="container column">
+          <img
+            style="border-radius: 4px; height: 25vh;"
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562874637/computer_wckgs7.jpg"
+            alt="computer"
+          />
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container column people-cont">
+        <div class="people-box-intro">
+          <h1 style="font-size: 32px">Lorem ipsum dolor sit amet</h1>
+          <br />
+          <p style="line-height: 140%">
+            Cras elementum ultrices diam. Maecenas ligula massa, varius a,
+            semper congue, euismod non, mi. Proin porttitor, orci nec nonummy
+            molestie, enim est eleifend mi, non fermentum diam nisl sit amet
+            erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in,
+            pretium a, enim. Pellentesque congue. Ut in risus volutpat libero
+            pharetra tempor.
+          </p>
+        </div>
+        <h1 style="font-size: 35px; margin-bottom: 2rem">
+          Lorem ipsum dolor sit amet
+        </h1>
+        <div class="container people-flex-end">
+          <div class="container column people-box people-blue">
+            <p style="font-style: italic;font-size: 24px">
+              <q
+                >Coming from an English teacher background and withouth
+                experience nor studies in design, this bootcamp has given me a
+                solid foundation to meet the challenges of the UX/UI field of
+                today.</q
+              >
+            </p>
+            <p style="font-size: 16px">
+              <strong>Jennifer Nicholson - Web Development Full-Time </strong>
+            </p>
+          </div>
+        </div>
+
+        <div class="container column people-box people-orange">
+          <p style="font-style: italic;font-size: 24px">
+            <q
+              >Coming from an English teacher background and withouth experience
+              nor studies in design, this bootcamp has given me a solid
+              foundation to meet the challenges of the UX/UI field of today.</q
+            >
+          </p>
+          <p style="font-size: 16px">
+            <strong>Jennifer Nicholson - Web Development Full-Time </strong>
+          </p>
+        </div>
+
+        <div class="container people-flex-end">
+          <div class="container column people-box people-blue">
+            <p style="font-style: italic;font-size: 24px">
+              <q
+                >Coming from an English teacher background and withouth
+                experience nor studies in design, this bootcamp has given me a
+                solid foundation to meet the challenges of the UX/UI field of
+                today.</q
+              >
+            </p>
+            <p style="font-size: 16px">
+              <strong>Jennifer Nicholson - Web Development Full-Time </strong>
+            </p>
+          </div>
+        </div>
+        
+      </div>
     </section>
     %%content%%
-	</body>
+  </body>
 </html>
