--- a/index.html
+++ b/index.html
@@ -166,8 +166,14 @@
         <h1 style="font-size: 35px; margin-bottom: 2rem">
           Lorem ipsum dolor sit amet
         </h1>
+
         <div class="container people-flex-end people-cont">
-          <div class="container column people-box people-blue">
+          <div class="container  people-box people-blue">
+              <div class="people-image">
+                <img src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1563026946/person_bm0m6u.png"
+                alt="person" />
+            </div>
+            <div class="container column ">
             <p style="font-style: italic;font-size: 24px">
               <q
                 >Coming from an English teacher background and withouth
@@ -179,37 +185,55 @@
             <p style="font-size: 16px">
               <strong>Jennifer Nicholson - Web Development Full-Time </strong>
             </p>
+            </div>
           </div>
         </div>
 
-        <div class="container column people-box people-orange people-cont">
-          <p style="font-style: italic;font-size: 24px">
-            <q
-              >Coming from an English teacher background and withouth experience
-              nor studies in design, this bootcamp has given me a solid
-              foundation to meet the challenges of the UX/UI field of today.</q
-            >
-          </p>
-          <p style="font-size: 16px">
-            <strong>Jennifer Nicholson - Web Development Full-Time </strong>
-          </p>
-        </div>
+        <div class="container people-flex-start people-cont">
+        <div class="container people-box people-orange">
 
-        <div class="container people-flex-end">
-          <div class="container column people-box people-blue people-cont">
-            <p style="font-style: italic;font-size: 24px">
-              <q
-                >Coming from an English teacher background and withouth
-                experience nor studies in design, this bootcamp has given me a
-                solid foundation to meet the challenges of the UX/UI field of
-                today.</q
-              >
-            </p>
-            <p style="font-size: 16px">
-              <strong>Jennifer Nicholson - Web Development Full-Time </strong>
-            </p>
-          </div>
+            
+            <div class="container column ">
+                <p style="font-style: italic;font-size: 24px">
+                        <q
+                        >Coming from an English teacher background and withouth experience
+                        nor studies in design, this bootcamp has given me a solid
+                        foundation to meet the challenges of the UX/UI field of today.</q
+                        >
+                    </p>
+                    <p style="font-size: 16px">
+                            <strong>Jennifer Nicholson - Web Development Full-Time </strong>
+                        </p>
+                    </div>
+               <div class="people-image-end">
+                       <img src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1563026946/person_bm0m6u.png"
+                       alt="person" />
+                   </div>
+
         </div>
+    </div>
+
+        <div class="container people-flex-end people-cont">
+                <div class="container  people-box people-blue">
+                    <div class="people-image">
+                      <img src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1563026946/person_bm0m6u.png"
+                      alt="person" />
+                  </div>
+                  <div class="container column ">
+                  <p style="font-style: italic;font-size: 24px">
+                    <q
+                      >Coming from an English teacher background and withouth
+                      experience nor studies in design, this bootcamp has given me a
+                      solid foundation to meet the challenges of the UX/UI field of
+                      today.</q
+                    >
+                  </p>
+                  <p style="font-size: 16px">
+                    <strong>Jennifer Nicholson - Web Development Full-Time </strong>
+                  </p>
+                  </div>
+                </div>
+              </div>
     </section>
     <section class="container reasons">
         <div class="reasons-text">
@@ -252,6 +276,27 @@
                 <button type="submit">Download ebook</button>
               </form>
     </section>
+    <footer class="footer container">
+        <div class="ironhack-info container">
+                <img
+                src="https://www2.ironhack.com/l/688303/2019-04-16/jcjm/688303/10386/IH_BLUE_LOGO_500x500.png"
+                alt="logo"
+              />
+              <p>© 2017 Ironhack. All Rights Reserved | Legal Advice</p>
+        </div>
+        <div class="certificates container ironhack-info">
+            <img 
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1563135858/2017-logo_ktkpct.jpg"
+            alt="2017-logo"/>
+            <img 
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1563135858/2016-logo_u95typ.jpg"
+            alt="2016-logo"/>
+            <p>Licensed by: </p>
+            <img 
+            src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1563119612/florida-education_ntmqga.jpg"
+            alt="florida-education"/>
+        </div>
+    </footer>
     %%content%%
   </body>
 </html>
