--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         src="https://www2.ironhack.com/l/688303/2019-04-16/jcjm/688303/10386/IH_BLUE_LOGO_500x500.png"
         atl="logo"
       />
-      <div class="container">
+      <div class="container mobile-wrap">
         <div class="header-content container column">
-          <h1>Join the next generation of digital creators !</h1>
+          <h1>Join the next generation of digital creators !</h1><br>
           <p>Lorem ipsum dolor sit amet, consetectur adipiscing</p>
         </div>
         <form class="form">
@@ -43,17 +43,17 @@
             name="company"
           />
 
+
           <button type="submit">Download ebook</button>
         </form>
       </div>
     </header>
-    <section>
+    <section class="intro">
       <div class="container rect-box">
-        <div>
+        <div class="container">
           <img
-            style="border-radius: 4px 0px 0px 4px"
             src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg"
-            alt="group"
+            alt="group" class=" intro-img"
           />
         </div>
         <div class="rect-text container column" style="padding: 3rem">
@@ -205,7 +205,7 @@
                             <strong>Jennifer Nicholson - Web Development Full-Time </strong>
                         </p>
                     </div>
-               <div class="people-image-end">
+                <div class="people-image-end">
                        <img src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1563026946/person_bm0m6u.png"
                        alt="person" />
                    </div>
@@ -235,7 +235,7 @@
                 </div>
               </div>
     </section>
-    <section class="container reasons">
+    <section class="container reasons mobile-column">
         <div class="reasons-text">
             <h1>Why should you download this?</h1><br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed.</p>
@@ -276,7 +276,7 @@
                 <button type="submit">Download ebook</button>
               </form>
     </section>
-    <footer class="footer container">
+    <footer class="footer container mobile-column">
         <div class="ironhack-info container">
                 <img
                 src="https://www2.ironhack.com/l/688303/2019-04-16/jcjm/688303/10386/IH_BLUE_LOGO_500x500.png"
