--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
     <section>
       <div class="container rect mobile-column">
-        <div class="rect-text">
+        <div class="rect-text class order">
           <h1 style="color:#0D8B9F; font-size: 34px">
             Lorem ipsum dolor sit amet
           </h1>
@@ -88,7 +88,6 @@
         </div>
         <div>
           <img
-            
             src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562870095/group_duhr1l.jpg"
             alt="group"
           />
@@ -193,7 +192,7 @@
         <div class="container people-box people-orange mobile-wrap">
 
             
-            <div class="container column ">
+            <div class="container column order">
                 <p style="font-style: italic;font-size: 24px">
                         <q
                         >Coming from an English teacher background and withouth experience
