replaced inline styling

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             alt="group" class=" intro-img"
           />
         </div>
-        <div class="rect-text container column intro-mobile-box " style="padding: 3rem">
-          <h1 style="color:#F49102; font-size: 30px">
+        <div class="rect-text container column intro-mobile-box padd-3">
+          <h1 class="intro-title">
             Lorem ipsum dolor sit amet
           </h1>
-          <p style="margin-top: 2rem" class="fontsize-18">
+          <p class="marg-top-2" >
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
             risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
             nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas
@@ -72,10 +72,10 @@
     <section>
       <div class="container rect mobile-column">
         <div class="rect-text class order">
-          <h1 style="color:#0D8B9F; font-size: 34px">
+          <h1 class="rect-blue-header">
             Lorem ipsum dolor sit amet
           </h1>
-          <p style="margin-top: 2rem" class="fontsize-18">
+          <p class="marg-top-2">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
             risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
             nec, ultricies sed. <br /><br />Cras elementum ultrices diam.
@@ -104,10 +104,10 @@
           />
         </div>
         <div class="rect-text">
-          <h1 style="color:#F49102; font-size: 34px">
+          <h1 class="rect-orange-header">
             Lorem ipsum dolor sit amet
           </h1>
-          <p style="margin-top: 2rem" class="fontsize-18">
+          <p class="marg-top-2">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
             risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
             nec, ultricies sed. <br /><br />Cras elementum ultrices diam.
@@ -127,13 +127,13 @@
       </div>
     </section>
     <section>
-      <h1 style="margin-left: 4.5rem; font-size: 35px">Our values</h1>
+      <h1 class="values-header">Our values</h1>
       <div class="container video-box mobile-wrap">
         <div class="container column video-box-text">
-          <h2 style="font-size: 18px">
+          <h2 class="f18">
             Be driven by passion above anything else
           </h2>
-          <p style="margin-top: 1rem; font-size: 16px">
+          <p class="f16 values-p">
             It's hard to achieve success when you don't know where you're going.
             Through one-on-one mentorship and exposure to our local tech
             ecosystems, we help you understand what oprions are out there and
@@ -142,7 +142,7 @@
         </div>
         <div class="container column">
           <img
-            style="border-radius: 4px; height: 25vh;"
+            class="values-img"
             src="https://res.cloudinary.com/dxbwwhlc6/image/upload/v1562874637/computer_wckgs7.jpg"
             alt="computer"
           />
@@ -151,9 +151,9 @@
     </section>
     <section class="container column people-main-cont">
         <div class="people-box-intro">
-          <h1 style="font-size: 32px">Lorem ipsum dolor sit amet</h1>
+          <h1 class="f32">Lorem ipsum dolor sit amet</h1>
           <br />
-          <p style="line-height: 140%">
+          <p class="line-h-140">
             Cras elementum ultrices diam. Maecenas ligula massa, varius a,
             semper congue, euismod non, mi. Proin porttitor, orci nec nonummy
             molestie, enim est eleifend mi, non fermentum diam nisl sit amet
@@ -162,7 +162,7 @@
             pharetra tempor.
           </p>
         </div>
-        <h1 style="font-size: 35px; margin-bottom: 2rem">
+        <h1 class="people-heading">
           Lorem ipsum dolor sit amet
         </h1>
 
@@ -173,7 +173,7 @@
                 alt="person" />
             </div>
             <div class="container column ">
-            <p style="font-style: italic;font-size: 24px">
+            <p class="f24 italic">
               <q
                 >Coming from an English teacher background and withouth
                 experience nor studies in design, this bootcamp has given me a
@@ -181,7 +181,7 @@
                 today.</q
               >
             </p>
-            <p style="font-size: 16px">
+            <p class="f16">
               <strong>Jennifer Nicholson - Web Development Full-Time </strong>
             </p>
             </div>
@@ -193,14 +193,14 @@
 
             
             <div class="container column order">
-                <p style="font-style: italic;font-size: 24px">
+                <p class="italic f24">
                         <q
                         >Coming from an English teacher background and withouth experience
                         nor studies in design, this bootcamp has given me a solid
                         foundation to meet the challenges of the UX/UI field of today.</q
                         >
                     </p>
-                    <p style="font-size: 16px">
+                    <p class="f16">
                             <strong>Jennifer Nicholson - Web Development Full-Time </strong>
                         </p>
                     </div>
@@ -219,7 +219,7 @@
                       alt="person" />
                   </div>
                   <div class="container column ">
-                  <p style="font-style: italic;font-size: 24px">
+                  <p class="italic f24">
                     <q
                       >Coming from an English teacher background and withouth
                       experience nor studies in design, this bootcamp has given me a
@@ -227,7 +227,7 @@
                       today.</q
                     >
                   </p>
-                  <p style="font-size: 16px">
+                  <p class="f16">
                     <strong>Jennifer Nicholson - Web Development Full-Time </strong>
                   </p>
                   </div>
