update fonts link in html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="%%description%%" />
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://www.myfonts.com/fonts/letter-omega/gelion/regular/" rel="stylesheet">
     <title>%%title%%</title>
   </head>
   <body>
