update link html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="%%description%%" />
     <link rel="stylesheet" href="./style.css" />
-    <link href="https://www.myfonts.com/fonts/letter-omega/gelion/regular/" rel="stylesheet">
+    <link href="https://ih-pardot.s3-eu-west-1.amazonaws.com/MyFontsWebfontsKit.css" rel="stylesheet">
     <title>%%title%%</title>
   </head>
   <body>
